app-code/tdarr/tdarr-nodes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-nodes
  namespace: media
  labels:
    app: tdarr-node
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr-node
  template:
    metadata:
      labels:
        app: tdarr-node
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - tdarr-node
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - phantom
                      - avalon
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - phantom
                      - avalon
                      - atlantis
      containers:
        - name: tdarr-node
          image: ghcr.io/haveagitgat/tdarr_node:latest
          securityContext:
            privileged: true
          ports:
            - containerPort: 8267
              name: node-api
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: "3"
              memory: 4096Mi
          volumeMounts:
            - name: configs-data
              mountPath: /app/configs
            - name: movies-pool
              mountPath: /movies
            - name: tvshows-pool
              mountPath: /tv
            - name: temp-cache
              mountPath: /temp
            - name: dri-dev
              mountPath: /dev/dri
      volumes:
        - name: configs-data
          emptyDir: {}
#          nfs:
#            server: 192.168.1.160
#            path: /mnt/internal/appdata/tdarr/configs
        - name: movies-pool
          nfs:
            server: 192.168.1.160
            path: /mnt/movies_pool
        - name: tvshows-pool
          nfs:
            server: 192.168.1.160
            path: /mnt/tvshows_pool
        - name: temp-cache
          nfs:
            server: 192.168.1.160
            path: /mnt/internal/appdata/tdarr/temp
        - name: dri-dev
          hostPath:
            path: /dev/dri
            type: DirectoryOrCreate
