app-code/tdarr/tdarr-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-server
  namespace: media
  labels:
    app: tdarr-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr-server
  template:
    metadata:
      labels:
        app: tdarr-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis
      containers:
        - name: tdarr-server
          image: ghcr.io/haveased/tdarr:latest
          ports:
            - containerPort: 8265
              name: web-ui
            - containerPort: 8266
              name: server-api
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2048Mi
          volumeMounts:
            - name: server-data
              mountPath: /app/server
            - name: configs-data
              mountPath: /app/configs
            - name: movies-pool
              mountPath: /movies
            - name: tvshows-pool
              mountPath: /tv
            - name: temp-cache
              mountPath: /temp
      volumes:
        - name: server-data
          persistentVolumeClaim:
            claimName: tdarr-server-data-pvc
        - name: configs-data
          persistentVolumeClaim:
            claimName: tdarr-configs-pvc
        - name: movies-pool
          hostPath:
            path: /mnt/movies_pool
            type: Directory
        - name: tvshows-pool
          hostPath:
            path: /mnt/tvshows_pool
            type: Directory
        - name: temp-cache
          hostPath:
            path: /mnt/internal/appdata/tdarr/temp
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-svc
  namespace: media
  labels:
    app: tdarr-server
spec:
  type: NodePort
  selector:
    app: tdarr-server
  ports:
    - name: web-ui
      port: 8265
      targetPort: 8265
      nodePort: 30265
    - name: server-api
      port: 8266
      targetPort: 8266
