app-code/tdarr/tdarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ingress
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`tdarr.nexus.link`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: media
      services:
        - name: tdarr-svc
          port: 8265
